--- a/index.html
+++ b/index.html
@@ -2,6 +2,12 @@
 <html>
     <head></head>
     <body>
-        <script> </script>
+        <script> 
+            let computerPlay = function (){
+                let arr=["Rock", "Paper", "Scissors"];
+                return arr[Math.floor(Math.random()*arr.length)]
+            }
+            
+        </script>
     </body>
 </html>
